Fixed some clickhouse related stuff and broken backup restore
